--- a/imprint.html
+++ b/imprint.html
@@ -12,23 +12,21 @@
 	<p class="font-size-normal">Responsible for content:</p>
 	<div class="a-tad-right smaller-fonts let-me-breathe">
 	  <p class="no-p-spacing">Meredith Michael Alongi</p>
-	  <p class="no-p-spacing">Spreestrasse 26</p>
-	  <p>12439 Berlin</p>
+	  <p class="no-p-spacing">Klarastrasse 6</p>
+	  <p>12459 Berlin</p>
 	  <p class="no-p-spacing">Shoot me an email: meredith at malongi dot com</p>
         </div>
 	<p class="font-size-normal">Responsible for design and engineering:</p>
 	<div class="a-tad-right smaller-fonts let-me-breathe">
 	  <p class="no-p-spacing">Veit Heller</p>
-	  <p class="no-p-spacing">Spreestrasse 26</p>
-	  <p>12439 Berlin</p>
+	  <p class="no-p-spacing">Klarastrasse 6</p>
+	  <p>12459 Berlin</p>
 	  <p>You talkin' to me: veit at veitheller dot de</p>
 	</div>
         <h3>GDPR Notice</h3>
         <p class="font-size-normal let-me-breathe">
           This website only keeps track of your IP address and user agent; this
-          is necessary for the webserver to work. If you submit a contact form,
-          we also save the details (e-mail, subject, and request) so we can get
-          back to you. No cookies are set.
+          is necessary for the webserver to work. No cookies are set.
         </p>
 	<a class="text-center buttonish-link" href="./">Cool, now send me back!</a>
       </div>
