--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="./style.css"></link>
+    <link rel="stylesheet" href="./style.css"/>
     <script type="text/javascript" src="./nav.js"></script>
     <title>Meredith M. Alongi</title>
   </head>
@@ -18,7 +18,7 @@
       </div>
     </div>
     <div id="resume" class="content">
-      <img id="fade-img" src="./portrait.jpg">
+      <img id="fade-img" alt="portrait" src="./portrait.jpg">
       <div class="txt bigger">
         <h1>Resume</h1>
         <span>Translations from and to English, French and German</span>
@@ -48,12 +48,10 @@
     <div id="contact" class="content">
       <div class="txt">
         <h1>Get in Touch</h1>
-        <form action="./contact">
-          <input type="email" placeholder="Your email address" name="from">
-          <input type="text" placeholder="Who you are" name="subject">
-          <textarea placeholder="Information about your project" name="text"></textarea>
-          <input type="submit" value="Let me know">
-        </form>
+        <p>
+          If you want to write to me for any reason whatsoever, you can reach
+          me best via <a href="mailto:meredith@malongi.com">e-mail</a>.
+        </p>
       </div>
     </div>
     <div class="whole-width not-quite-bottom">
