fix a few web things

--- a/imprint.html
+++ b/imprint.html
@@ -4,6 +4,11 @@
     <link rel="stylesheet" href="./style.css"></link>
     <link rel="stylesheet" href="./imprint.css"></link>
     <title>Meredith M. Alongi</title>
+    <meta charset="utf-8">
+    <meta name="description" content="Meredith M. Alongi">
+    <meta name="author" content="Meredith M. Alongi">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="data:;base64,iVBORw0KGgo=">
   </head>
   <body>
     <div class="content">
