--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <link rel="stylesheet" href="./style.css"/>
     <script type="text/javascript" src="./nav.js"></script>
     <title>Meredith M. Alongi</title>
+    <meta charset="utf-8">
+    <meta name="description" content="Meredith M. Alongi">
+    <meta name="author" content="Meredith M. Alongi">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="data:;base64,iVBORw0KGgo=">
   </head>
   <body>
     <div class="content">
@@ -55,7 +60,7 @@
       </div>
     </div>
     <div class="whole-width not-quite-bottom">
-	<p class="note">Made with &#x2661; by Veit Heller. Check out the sources <a href="https://github.com/hellerve/malongi">here</a>. Need an imprint? <a href="./imprint">Gotcha.</a></p>
+	<p class="note">Made with &#x2661; by Veit Heller. Check out the sources <a href="https://github.com/hellerve/malongi">here</a>. Need an imprint? <a href="./imprint.html">Gotcha.</a></p>
     </div>
   </body>
 </html>
